k3s/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  namespace: strapi
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP
