k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  namespace: strapi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/hsts-max-age: "31536000"
    traefik.ingress.kubernetes.io/hsts-include-subdomains: "true"
    traefik.ingress.kubernetes.io/hsts-preload: "true"
    traefik.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: shipitlive.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: strapi
            port:
              number: 1337
  tls:
  - hosts:
    - admin.shipitlive.dev
    secretName: my-tls-secret
